--- a/views/layout/main.handlebars
+++ b/views/layout/main.handlebars
@@ -3,10 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Font Finder</title>
-    <link rel="stylesheet" href="/public/css/style.css">
+    <title>Font-Finder</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <div class="flex-column justify-space-around">
+        <header class="display-flex justify-space-between align center p-2">
+            <nav>
+                <!-- Conditionally render login or logout links -->
+                {{#if logged_in}}
+                <a href="/profile">profile</a> |
+                <button class="no-button" id="logout">logout</button>
+                {{else}}
+                <a href="/login">login</a>
+                {{/if}}
+            </nav>
+            <img src="" alt="logo" />
+        </header>
+        <main class="container container-fluid mt-5">
+            {{{ body }}}
+        </main>
+        <footer>
+
+        </footer>
+        {{#if logged_in}}
+        <script src="./"></script>
+        {{/if}}
+    </div>
 </body>
 </html>
