--- a/views/layout/main.handlebars
+++ b/views/layout/main.handlebars
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Find Finder</title>
+    <title>Font Finder</title>
+     <link rel="stylesheet" href="
+    https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css
+    ">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     
