--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -12,7 +12,7 @@
         <input class="form-input" type="password" id="password-login" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">login</button>
+        <button class="button is-small is-responsive is-light" type="submit">login</button>
       </div>
     </form>
   </div>
@@ -21,19 +21,19 @@
 
     <form class="form signup-form">
       <div class="form-group">
-        <label for="name-signup">name:</label>
-        <input class="form-input" type="text" id="name-signup" />
+        <label for="name-signup">Name:</label>
+        <input class="input" type="text" id="name-signup" placeholder="Your Name" />
       </div>
       <div class="form-group">
-        <label for="email-signup">email:</label>
-        <input class="form-input" type="text" id="email-signup" />
+        <label for="email-signup">Email:</label>
+        <input class="input" type="email" id="email-signup" placeholder="Email"/>
       </div>
       <div class="form-group">
-        <label for="password-signup">password:</label>
-        <input class="form-input" type="password" id="password-signup" />
+        <label for="password-signup">Password:</label>
+        <input class="input" type="password" id="password-signup" placeholder="Password"/>
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">signup</button>
+        <button class="button is-outlined is-responsive" type="submit">signup</button>
       </div>
     </form>
   </div>
