added images folder and logo

--- a/views/layout/main.handlebars
+++ b/views/layout/main.handlebars
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+    <header>
+        <img src="/images/ff-logo.png" alt="Welcome to FontFinder!"
+    </header>
     
 </body>
 </html>
