--- a/views/layout/main.handlebars
+++ b/views/layout/main.handlebars
@@ -7,21 +7,22 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <p>Hello World</p>
     <div class="flex-column justify-space-around">
         <header class="display-flex justify-space-between align center p-2">
             <nav>
                 <!-- Conditionally render login or logout links -->
-                {{#if logged_in}}
+                <!--{{#if logged_in}}
                 <a href="/profile">profile</a> |
                 <button class="no-button" id="logout">logout</button>
                 {{else}}
                 <a href="/login">login</a>
-                {{/if}}
+                {{/if}}-->
             </nav>
             <img src="" alt="logo" />
         </header>
         <main class="container container-fluid mt-5">
-            {{{ body }}}
+            <!--{{{ body }}}-->
         </main>
         <footer>
 
