'Last Last Push'

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,10 +19,10 @@
                 <a href="/login">login</a>
                 {{/if}}-->
             </nav>
-            <img src="" alt="logo" />
+            {{!-- <img src="" alt="logo" /> --}}
         </header>
         <main class="container container-fluid mt-5">
-            <!--{{{ body }}}-->
+            {{{body}}}
         </main>
         <footer>
 
