bringing my branch up to date with Dakota's so the server works

--- a/views/layout/main.handlebars
+++ b/views/layout/main.handlebars
@@ -11,8 +11,15 @@
 </head>
 <body>
     <header>
-        <img src="/images/ff-logo.png" alt="Welcome to FontFinder!"
+        <nav>
+            <a href="/signUp">Sign Up!</a>
+            <a href="/login">Login!</a>
+        </nav>
+        <img src="./images/ff-logo.png" alt="Welcome to FontFinder!">
     </header>
+
+{{{ body }}}
+
     
 </body>
 </html>
