--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,1 +1,36 @@
-<div>Homepage</div>
+<div class="main-container">
+        <div class="main-content">
+            <input type="text" name="" id="textInput" placeholder="Type text here..." 
+            oninput="GenerateFont()">
+
+            <div class="font-contain">
+                
+                <div class="font-holder">
+                    <li><label for="Bitter" id="bitter">Bitter</label></li>
+                </div>
+
+                <div class="font-holder">
+                    <li><label for="Oswald" id="oswald">Oswald</label></li>
+                </div>
+
+                <div class="font-holder">
+                    <li><label for="Playfair Display" id="playfair-display">Playfair Display</label></li>
+                </div>
+
+                <div class="font-holder">
+                    <li><label for="Meriweather" id="meriweather">Meriweather</label></li>
+                </div>
+
+                <div class="font-holder">
+                    <li><label for="Roboto" id="roboto">Roboto</label></li>
+                </div>
+
+                <div class="font-holder">
+                    <li><label for="Open Sans" id="open-sans">Open Sans</label></li>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <script src="../public/js/fonts.js"></script>
