--- a/views/partials/card-post.handlebars
+++ b/views/partials/card-post.handlebars
@@ -1,7 +1,7 @@
 <div class="feed-card-container">
-    <div class="post-card" id="post-link" data-id={{this.id}} data-user={{this.user.username}}>
-        <p class="post-title"><strong>{{this.title}}</strong></p>
-        <p class="post-info">—<span class="username">{{this.user.username}}</span>, <strong>{{format_date this.createdAt}} </strong></p> 
+    <div class="post-card" id="post-link" data-id={{this.id}} data-user={{this.user.name}}>
+        <p class="post-title"><strong>{{this.post_title}}</strong></p>
+        <p class="post-info">—<span class="username">{{this.user.name}}</span>, <strong>{{format_date this.createdAt}} </strong></p> 
         <br>
         <div class="post-body">
             <div class="truncate-text">
