--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -8,7 +8,8 @@
                 </div>      
             </form>
         </div>
-        <div>
-            
+        <div class="column is-three-quarters">
+
         </div>
+
 </div>
