--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,7 +17,7 @@
         <nav>
             <a href="/signUp"><button class="button is-info is-normal">Sign Up!</button></a>
             <a href="/login"><button class="button is-info is-light is-normal">Login!</button></a>
-            <a href="/login"><button class="button is-success is-normal">Blog!</button></a>
+            <a href="/blog"><button class="button is-success is-normal">Blog!</button></a>
         </nav>
         <img src="./images/ff-logo.png" id="ff-logo" alt="Welcome to FontFinder!">
     </header>
