'Push Up new MVC code ' to dakota-branch

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,35 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Font-Finder</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Font Finder</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Poppins:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
+    <!--<link rel="stylesheet" href="/css/jass.css">-->
+    <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
-    <p>Hello World</p>
     <div class="flex-column justify-space-around">
-        <header class="display-flex justify-space-between align center p-2">
-            <nav>
-                <!-- Conditionally render login or logout links -->
-                <!--{{#if logged_in}}
+    <header class="display-flex justify-space-between align-center p-2">
+      <img src="/assets/ff-logo.png" id="ff-logo" alt="Welcome to FontFinder!">
+      <nav>
+        <!-- Conditionally render login or logout links -->
+        {{#if logged_in}}
+        <a href="/profile">profile</a> |
+        <button class="no-button" id="logout">logout</button>
+        {{else}}
+        <a href="/login">login</a>
+        {{/if}}
+      </nav>
+    </header>
+    <main class="container container-fluid mt-5">
+      <!-- Render the sub layout -->
+      {{{ body }}}
+    </main>
+    <footer>
+      
+    </footer>
+  </div>
+
+    <header>
+        <nav>
+           {{#if logged_in}}
                 <a href="/profile">profile</a> |
                 <button class="no-button" id="logout">logout</button>
                 {{else}}
                 <a href="/login">login</a>
-                {{/if}}-->
-            </nav>
-            {{!-- <img src="" alt="logo" /> --}}
-        </header>
-        <main class="container container-fluid mt-5">
-            {{{body}}}
-        </main>
-        <footer>
+                {{/if}}
+        </nav>
+        <img src="/assets/FontFinder.png" id="ff-logo" alt="Welcome to FontFinder!">
+        <nav>
+            <a href="/">Home</a href>
+            <a href="/">Post</a>
+        </nav>
+    </header>
 
-        </footer>
-        {{#if logged_in}}
-        <script src="./"></script>
-        {{/if}}
-    </div>
+{{{ body }}} 
 </body>
 </html>
