--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,14 +9,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Poppins:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
-    <!--<link rel="stylesheet" href="/css/jass.css">-->
+    <link rel="stylesheet" href="/css/jass.css">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
-  </div>
 
     <header>
+        <img src="/images/FontFinder.png" id="ff-logo" alt="Welcome to FontFinder!">
         <nav>
            {{#if logged_in}}
                 <a href="/profile">profile</a> |
@@ -25,12 +25,15 @@
                 <a href="/login">login</a>
                 {{/if}}
         </nav>
-        <img src="/assets/FontFinder.png" id="ff-logo" alt="Welcome to FontFinder!">
         <nav>
             <a href="/">Home</a href>
             <a href="/">Post</a>
         </nav>
+
     </header>
+    <footer>
+      
+    </footer>
 
 {{{ body }}} 
 
