--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Poppins:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="/css/jass.css">
     <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -20,14 +21,14 @@
         <nav>
            {{#if logged_in}}
                 <a href="/profile">profile</a> |
-                <button class="no-button" id="logout">logout</button>
+                <button class="button is-danger is-light" id="logout">logout</button>
                 {{else}}
                 <a href="/login">login</a>
                 
                 {{/if}}
         </nav>
         <nav>
-            <a href="/">Home</a href>
+            <a href="/">Home</a>
             <a href="/">Post</a>
         </nav>
 
