--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,23 +1,32 @@
 @import url('https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-*{
+:root {
+    --darkColor: black;
+    --highlightColor: #bd0000;
+    --hoverColor: #808588;
+    --lightColor: #fff;
+    --standardPix: 12px;
+    --borRadSm: 8px;
+}
+
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-body{
+body {
     background: #fff;
     min-height:100vh;
 }
 
-#ff-logo{
+#ff-logo {
   float: right;
   width: 30%;
   margin: 20px;
 }
 
-.main-container{
+.main-container {
     width: 100%;
     height: auto;
     max-height: 100%;
@@ -27,7 +36,7 @@ body{
     justify-content: center;
 }
 
-.main-content{
+.main-content {
     width: 550px;
     height: 100%;
     position: relative;
@@ -36,7 +45,7 @@ body{
     flex-direction: column;
 }
 
-.main-container input{
+.main-container input {
     width: 100%;
     height: 60px;
     border: 1px solid rgb(100, 100, 100);
@@ -58,14 +67,14 @@ body{
     margin-top: 30px;
 }
 
-.font-holder{
+.font-holder {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.font-holder li{
+.font-holder li {
     width: 550px;
     min-height: 65px;
     height: auto;
@@ -82,26 +91,26 @@ body{
 
 /* Font style support from google fonts */
 
-#bitter{
+#bitter {
     font-family: 'Bitter', serif;
 }
 
-#oswald{
+#oswald {
     font-family: "Oswald", sans-serif;
 }
 
-#playfair-display{
+#playfair-display {
     font-family: 'Playfair Display', serif;
 }
 
-#meriweather{
+#meriweather {
     font-family: 'Meriweather', serif;
 }
 
-#roboto{
+#roboto {
     font-family: 'Roboto', sans-serif;
 }
 
-#open-sans{
+#open-sans {
     font-family: 'Open Sans', sans-serif;
 }
