--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Font Finder</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Poppins:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
@@ -20,24 +19,22 @@
         <img src="/images/FontFinder.png" id="ff-logo" alt="Welcome to FontFinder!">
         <nav>
            {{#if logged_in}}
-                <a href="/profile">profile</a> |
-                <button class="button is-danger is-light" id="logout">logout</button>
+                <a href="/profile">Profile</a> |
+                <button class="button is-danger is-light" id="logout">Logout</button>
                 {{else}}
-                <a href="/login">login</a>
-                
+                <a href="/login">Login</a>
                 {{/if}}
-        </nav>
-        <nav>
             <a href="/">Home</a>
             <a href="/">Post</a>
         </nav>
 
     </header>
+    {{{ body }}} 
     <footer>
       
     </footer>
 
-{{{ body }}} 
+
 
 <script link="/js/fonts.js"></script>
 </body>
