--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,8 +1,9 @@
-<div class='row'>
-  <div class='col-md-6'>
-    <h2>Login</h2>
+<div class="columns">
+  <div class="column is-half">
 
-    <form class='form login-form'>
+
+    <form class='form login-form'>    
+      <h2>Login</h2>
       <div class='form-group'>
         <label for='email-login'>Email:</label>
         <input class='form-input' type='text' id='email-login' />
@@ -16,10 +17,11 @@
       </div>
     </form>
   </div>
-  <div class='col-md-6'>
-    <h2>Signup</h2>
+  <div class="column is-half">
 
-    <form class='form signup-form'>
+
+    <form class='form signup-form'>    
+      <h2>Signup</h2>
       <div class='form-group'>
         <label for='name-signup'>Name:</label>
         <input class='form-input' type='text' id='name-signup' />
