--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -13,15 +13,13 @@
         <input class='form-input' type='password' id='password-login' />
       </div>
       <div class='form-group'>
-        <button class='btn btn-primary' type='submit'>Login</button>
+        <button class='submit-btn' type='submit'>Login</button>
       </div>
     </form>
   </div>
   <div class="column is-half">
-
-
     <form class='form signup-form'>    
-      <h2>Signup</h2>
+      <h2>Sign Up</h2>
       <div class='form-group'>
         <label for='name-signup'>Name:</label>
         <input class='form-input' type='text' id='name-signup' />
@@ -35,7 +33,7 @@
         <input class='form-input' type='password' id='password-signup' />
       </div>
       <div class='form-group'>
-        <button class='btn btn-primary' type='submit'>Signup</button>
+        <button class='submit-btn' type='submit'>Sign Up</button>
       </div>
     </form>
   </div>
