--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,7 +25,7 @@
                 <a href="/login">Login</a>
                 {{/if}}
             <a href="/">Home</a>
-            <a href="/">Post</a>
+            <a href="/post">Blog</a>
         </nav>
 
     </header>
