--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -18,9 +18,9 @@
     <div class='form-group'>
       <input placeholder='Comment...' class='comment-input' />
       <!-- {{post.id}} can be used here as needed -->
-      <button id='comment-button' data-post-id='{{post.id}}'>Comment</button>
+      <button id='submit-btn' data-post-id={{post.id}}>Comment</button>
       <!-- Add a hidden input to store user_id -->
-      <input type='hidden' id='user-id' data-user-id='{{user_id}}' />
+      <input type='hidden' id='user-id' data-user-id={{user_id}} />
     </div>
   </form>
 </div>
