--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -15,7 +15,7 @@
 
       <form class="form new-post-form">
         <!-- Hidden input to store user_id -->
-        <input type="hidden" id="user-id" value="{{user_id}}">
+        <input type="hidden" id="user-id" value={{user_id}}>
 
         <div class="form-group">
           <label for="post-title">Title:</label>
