Added more fonts and changed some CSS

--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -1,4 +1,5 @@
 {{#each posts as |post|}}
+<div class="blog-container">
   <div class='post-container'>
     <!-- container class for styling -->
     <div class='row mb-4 post'>
@@ -21,6 +22,7 @@
       </div>
     </div>
   </div>
+</div>
 {{/each}}
 
 {{#if logged_in}}
