--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -6,11 +6,7 @@
             <div class="font-contain">
                 
                 <div class="font-holder">
-                    <li><label for="Bitter" id="bitter">Bitter</label></li>
-                </div>
-
-                <div class="font-holder">
-                    <li><label for="Oswald" id="oswald">Oswald</label></li>
+                    <li><label for="Roboto Slab" id="roboto-slab">Roboto Slab</label></li>
                 </div>
 
                 <div class="font-holder">
@@ -22,6 +18,10 @@
                 </div>
 
                 <div class="font-holder">
+                    <li><label for="Bitter" id="bitter">Bitter</label></li>
+                </div>
+
+                <div class="font-holder">
                     <li><label for="Roboto" id="roboto">Roboto</label></li>
                 </div>
 
@@ -29,6 +29,41 @@
                     <li><label for="Open Sans" id="open-sans">Open Sans</label></li>
                 </div>
 
+                <div class="font-holder">
+                    <li><label for="Montserrat" id="montserrat">Montserrat</label></li>
+                </div>
+
+                <div class="font-holder">
+                    <li><label for="Nunito San" id="nunito-sans">Nunito San</label></li>
+                </div>
+
+                <div class="font-holder">
+                    <li><label for="Oswald" id="oswald">Oswald</label></li>
+                </div>
+
+                <div class="font-holder">
+                    <li><label for="Cormorant" id="cormorant">Cormorant</label></li>
+                </div>
+
+                <div class="font-holder">
+                    <li><label for="Eczar" id="eczar">Eczar</label></li>
+                </div>
+
+                <div class="font-holder">
+                    <li><label for="Source Sans" id="source-sans">Source Sans</label></li>
+                </div>
+
+                <div class="font-holder">
+                    <li><label for="Fraunces" id="fraunces">Fraunces</label></li>
+                </div>
+
+                <div class="font-holder">
+                    <li><label for="Archivo" id="archivo">Archivo</label></li>
+                </div>
+
+                <div class="font-holder">
+                    <li><label for="Libre Baskerville" id="libre-baskerville">Libre Baskerville</label></li>
+                </div>
             </div>
         </div>
     </div>
