--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Bitter:ital,wght@0,100..900;1,100..900&family=Cormorant:ital,wght@0,300..700;1,300..700&family=Eczar:wght@400..800&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto+Slab:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
 
 :root {
     --darkColor: black;
@@ -52,6 +52,7 @@ header {
 .button {
     margin-top: 16px;
 }
+
 #ff-logo {
   float: right;
   width: 30%;
@@ -139,14 +140,95 @@ h2,
     font-weight: 600;
     font-style: normal;
 }
-/* Font style support from google fonts */
 
-#bitter {
-    font-family: 'Bitter', serif;
+/* Main Title Styles */
+.main-title a {
+    background-color: #fff;
+    padding: 5px;
+    margin-left: 23%;
+    display: inline-block;
+    border-radius: 5px;
+    color: var(--primary);
+}
+  
+/* Post Styles */
+.post-container {
+    background-color: #dadada;
+    border-radius: 5px;
+    padding: 20px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    width: 80%;
+    
 }
 
-#oswald {
-    font-family: "Oswald", sans-serif;
+.blog-container {
+    width: 100%;
+    height: auto;
+    max-height: 100%;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+  
+.post-title {
+    background-color: var(--primary);
+    color: #fff;
+    padding: 5px;
+    border-radius: 5px;
+}
+  
+.post-content {
+    margin-top: 20px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+  
+.post-info {
+    font-size: 12px;
+    margin-top: 5px;
+}
+  
+.post-info .date {
+    font-style: italic;
+}
+  
+/* Comment Styles */
+.comment-text {
+    display: inline-block;
+    background-color: #F0F0F0;
+    padding: 5px;
+    margin-top: 5px;
+    border: 1px solid #ccc;
+}
+  
+#comment-form {
+    padding-left: 5px;
+}
+  
+.comment-content {
+    padding: 10px;
+    font-size: 12px;
+    font-style: italic;
+    text-align: right;
+}
+  
+.comment-body {
+    background-color: #F0F0F0;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+  
+.comment-author {
+    font-size: 12px;
+    font-style: italic;
+}
+
+/* Font style support from google fonts */
+
+#roboto-slab {
+    font-family: 'Roboto Slab', serif ; 
 }
 
 #playfair-display {
@@ -157,10 +239,50 @@ h2,
     font-family: 'Meriweather', serif;
 }
 
+#bitter {
+    font-family: 'Bitter', serif;
+}
+
 #roboto {
     font-family: 'Roboto', sans-serif;
 }
 
 #open-sans {
     font-family: 'Open Sans', sans-serif;
+}
+
+#montserrat {
+    font-family: 'Montserrat', sans-serif;
+}
+
+#nunito-sans{
+    font-family: 'Nunito Sans', sans-serif;
+}
+
+#oswald {
+    font-family: "Oswald", sans-serif;
+}
+
+#cormorant {
+    font-family: 'Cormorant', serif;
+}
+
+#eczar {
+    font-family: 'Eczar', serif;
+}
+
+#source-sans {
+    font-family: 'Source Sans 3', sans-serif;
+}
+
+#fraunces {
+    font-family: 'Fraunces', sans-serif;
+}
+
+#archivo {
+    font-family: 'Archivo', sans-serif;
+}
+
+#libre-baskerville {
+    font-family: 'Libre Baskerville', serif;
 }
