--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,7 +32,8 @@ nav a {
 }
 
 a:hover {
-    color: --var(--hoverColor)
+    background-color: #34A853;
+    color: white;
 }
 
 body {
@@ -47,6 +48,11 @@ header {
 
 .form {
     padding: var(--smPix) var(--medPix);
+}
+
+.columns{
+    width: 80%;
+    margin: auto;
 }
 
 .button {
@@ -153,13 +159,12 @@ h2,
   
 /* Post Styles */
 .post-container {
-    background-color: #dadada;
     border-radius: 5px;
     padding: 20px;
     margin-bottom: 20px;
     border: 1px solid #ccc;
     width: 80%;
-    
+    border: 1px solid black;
 }
 
 .blog-container {
@@ -200,7 +205,7 @@ h2,
     background-color: #F0F0F0;
     padding: 5px;
     margin-top: 5px;
-    border: 1px solid #ccc;
+    border: 1px solid black;
 }
   
 #comment-form {
@@ -223,6 +228,35 @@ h2,
 .comment-author {
     font-size: 12px;
     font-style: italic;
+}
+
+/* Dashboard */
+.dashboard-container {
+    width: 100%;
+    padding: 20px;
+    margin: auto;
+}
+
+.comment-container {
+    width: 100%;
+    padding: 20px;
+    margin: auto;
+    border-radius: 5px;
+}
+
+.comment-input {
+    margin: 10px;
+    height: 40px;
+    width: 200px;
+    border-radius: 5px;
+}
+
+.comment-test {
+    border-radius: 5px;
+}
+
+#submit-btn {
+    padding: 10px;
 }
 
 /* Font style support from google fonts */
