--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,7 +19,7 @@
         <img src="/images/FontFinder.png" id="ff-logo" alt="Welcome to FontFinder!">
         <nav>
            {{#if logged_in}}
-                <a href="/profile">Profile</a> |
+                <<a href>="/profile">Profile</a> |
                 <button class="button is-danger is-light" id="logout">Logout</button>
                 {{else}}
                 <a href="/login">Login</a>
