changed post title color

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -145,6 +145,7 @@ h2,
     font-family: "Poppins", sans-serif;
     font-weight: 600;
     font-style: normal;
+    color: var(--darkColor)
 }
 
 /* Main Title Styles */
